--- a/QGL_Projection/QGL_Projection.vcxproj.filters
+++ b/QGL_Projection/QGL_Projection.vcxproj.filters
@@ -1,80 +1,90 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Resources">
-      <UniqueIdentifier>accd3aa8-1ba0-4223-9bbe-0c431709210b</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tga;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
-    <Filter Include="Generated Files">
-      <UniqueIdentifier>{926ab91d-31b4-48c3-b9a4-e681349f27f0}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Content Info">
-      <UniqueIdentifier>{422a2ac0-e3a1-49f8-8f7c-5ebac482f76d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Content Project">
-      <UniqueIdentifier>{b36e55bd-0f8f-41ed-9029-4915564f8b40}</UniqueIdentifier>
-    </Filter>
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="$(GeneratedFilesDir)module.g.cpp" />
-    <ClCompile Include="CompilerVersion.cpp" />
-    <ClCompile Include="ContentInfo\ContentInfo.cpp">
-      <Filter>Content Info</Filter>
+    <ClCompile Include="src\Projections\Model\Versioning\CompilerVersion.cpp">
+      <Filter>Source Files\Projections\Model\Versioning</Filter>
     </ClCompile>
-    <ClCompile Include="ContentInfo\ContentLoader.cpp">
-      <Filter>Content Info</Filter>
+    <ClCompile Include="src\Projections\Content\Content-Metadata\ContentLoader.cpp">
+      <Filter>Source Files\Projections\Content\Content-Metadata</Filter>
     </ClCompile>
-    <ClCompile Include="ContentInfo\ResourceType.cpp">
-      <Filter>Content Info</Filter>
-    </ClCompile>
-    <ClCompile Include="ContentProject\ContentProject.cpp">
-      <Filter>Content Project</Filter>
-    </ClCompile>
-    <ClCompile Include="ContentProject\ContentProjectEntry.cpp">
-      <Filter>Content Project</Filter>
+    <ClCompile Include="src\Projections\Content\Content-Metadata\ResourceType.cpp">
+      <Filter>Source Files\Projections\Content\Content-Metadata</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
-    <ClInclude Include="CompilerVersion.h" />
-    <ClInclude Include="ContentInfo\ContentInfo.h">
-      <Filter>Content Info</Filter>
+    <ClInclude Include="include\CompilerVersion.h">
+      <Filter>Header Files\Projections\Model\Versioning</Filter>
     </ClInclude>
-    <ClInclude Include="ContentInfo\ContentLoader.h">
-      <Filter>Content Info</Filter>
+    <ClInclude Include="include\ContentLoader.h">
+      <Filter>Header Files\Projections\Content\Content-Metadata</Filter>
     </ClInclude>
-    <ClInclude Include="ContentInfo\ResourceType.h">
-      <Filter>Content Info</Filter>
+    <ClInclude Include="include\ResourceType.h">
+      <Filter>Header Files\Projections\Content\Content-Metadata</Filter>
     </ClInclude>
-    <ClInclude Include="ContentProject\ContentProject.h">
-      <Filter>Content Project</Filter>
-    </ClInclude>
-    <ClInclude Include="ContentProject\ContentProjectEntry.h">
-      <Filter>Content Project</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <Midl Include="CompilerVersion.idl" />
-    <Midl Include="ContentInfo\ContentInfo.idl">
-      <Filter>Content Info</Filter>
-    </Midl>
-    <Midl Include="ContentInfo\ContentLoader.idl">
-      <Filter>Content Info</Filter>
-    </Midl>
-    <Midl Include="ContentInfo\ResourceType.idl">
-      <Filter>Content Info</Filter>
-    </Midl>
-    <Midl Include="ContentProject\ContentProject.idl">
-      <Filter>Content Project</Filter>
-    </Midl>
-    <Midl Include="ContentProject\ContentProjectEntry.idl">
-      <Filter>Content Project</Filter>
-    </Midl>
-    <Midl Include="IContentExtension.idl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="QGL_Projection.def" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Header Files">
+      <UniqueIdentifier>{2c57e397-9f41-4763-804a-845b4851572b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files">
+      <UniqueIdentifier>{ad3ccbe2-5c91-4adf-8b5e-93532f5f0f9d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Projections">
+      <UniqueIdentifier>{dfbf1e70-292a-4aaa-b482-6b3340adda34}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Projections\Content">
+      <UniqueIdentifier>{b2dbe3bd-e8d5-4544-a271-1e124e0e0657}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Projections\Content\Content-Extensions">
+      <UniqueIdentifier>{8d0c8989-f238-48b1-bfef-a4366e42d1e3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Projections\Content\Content-File">
+      <UniqueIdentifier>{216fab2c-3d97-4e4b-b068-37e1fa5fe604}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Projections\Content\Content-Project">
+      <UniqueIdentifier>{0b2b10a7-3e42-4599-abe5-0bf76bcbe958}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Projections\Content\Content-Metadata">
+      <UniqueIdentifier>{e12946fc-f3cf-4c0c-9614-27f195fd6249}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Projections\Model">
+      <UniqueIdentifier>{d0db0429-e4d9-47d0-affc-1f62abc6ad74}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Projections\Model\Versioning">
+      <UniqueIdentifier>{0e13124f-8682-43ab-a73f-2bca66816039}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Projections">
+      <UniqueIdentifier>{7e8c3a74-3049-438f-87a2-32ffdcb5aa28}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Projections\Content">
+      <UniqueIdentifier>{3b70e68d-a3f5-4e0f-b726-0ae69aa52149}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Projections\Content\Content-Metadata">
+      <UniqueIdentifier>{01803f0f-5c02-4c3c-9e57-6ce6112465e2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Projections\Model">
+      <UniqueIdentifier>{fe595e6f-c1d6-4955-8f32-bd7759f918f7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Projections\Model\Versioning">
+      <UniqueIdentifier>{07c2fd79-6eca-4ad3-a740-fa128c5872b6}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <Midl Include="src\Projections\Model\Versioning\CompilerVersion.idl">
+      <Filter>Source Files\Projections\Model\Versioning</Filter>
+    </Midl>
+    <Midl Include="src\Projections\Content\Content-Metadata\ContentLoader.idl">
+      <Filter>Source Files\Projections\Content\Content-Metadata</Filter>
+    </Midl>
+    <Midl Include="src\Projections\Content\Content-Metadata\ResourceType.idl">
+      <Filter>Source Files\Projections\Content\Content-Metadata</Filter>
+    </Midl>
   </ItemGroup>
 </Project>
