--- a/Tests/QGL_Content.UnitTests/QGL_Content.UnitTests.vcxproj
+++ b/Tests/QGL_Content.UnitTests/QGL_Content.UnitTests.vcxproj
@@ -268,11 +268,6 @@
     <Image Include="Assets\Wide310x150Logo.scale-200.png" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="content_data_write_tests.cpp" />
-    <ClCompile Include="content_file_header_read_tests.cpp" />
-    <ClCompile Include="dict_meta_read_tests.cpp" />
-    <ClCompile Include="dict_read_tests.cpp" />
-    <ClCompile Include="read_file_offset_tests.cpp" />
     <ClCompile Include="Tests\Buffers\content_metadata_buffer_tests.cpp" />
     <ClCompile Include="Tests\Buffers\dict_entry_buffer_tests.cpp" />
     <ClCompile Include="Tests\Buffers\dict_metadata_buffer_tests.cpp" />
@@ -299,11 +294,17 @@
     <ClCompile Include="Tests\Importers\struct_importer_tests.cpp" />
     <ClCompile Include="Tests\Importers\wstring_importer_tests.cpp" />
     <ClCompile Include="Tests\Read-Write-Helpers\content_data_read_tests.cpp" />
-    <ClCompile Include="Tests\Read-Write-Helpers\dict_meta_write_tests.cpp" />
-    <ClCompile Include="Tests\Read-Write-Helpers\dict_write_tests.cpp" />
+    <ClCompile Include="Tests\Read-Write-Helpers\content_data_write_tests.cpp" />
+    <ClCompile Include="Tests\Read-Write-Helpers\content_file_header_read_tests.cpp" />
     <ClCompile Include="Tests\Read-Write-Helpers\content_file_header_write_tests.cpp" />
+    <ClCompile Include="Tests\Read-Write-Helpers\dict_meta_read_tests.cpp" />
+    <ClCompile Include="Tests\Read-Write-Helpers\dict_meta_write_tests.cpp" />
+    <ClCompile Include="Tests\Read-Write-Helpers\dict_read_tests.cpp" />
+    <ClCompile Include="Tests\Read-Write-Helpers\dict_write_tests.cpp" />
     <ClCompile Include="Tests\Read-Write-Helpers\offset_tests.cpp" />
+    <ClCompile Include="Tests\Read-Write-Helpers\read_file_offset_tests.cpp" />
     <ClCompile Include="Tests\Read-Write-Helpers\valid_data_tests.cpp" />
+    <ClCompile Include="Tests\Read-Write-Helpers\write_file_offset_tests.cpp" />
     <ClCompile Include="UnitTestApp.xaml.cpp">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
     </ClCompile>
@@ -317,7 +318,6 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="write_file_offset_tests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <SDKReference Include="CppUnitTestFramework.Universal, Version=$(UnitTestPlatformVersion)" />
@@ -335,8 +335,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="StorageFile.txt" />
     <Text Include="Tests\Test-Files\CheckMe.txt" />
+    <Text Include="Tests\Test-Files\StorageFile.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
