--- a/Tests/QGL_Content.UnitTests/QGL_Content.UnitTests.vcxproj.filters
+++ b/Tests/QGL_Content.UnitTests/QGL_Content.UnitTests.vcxproj.filters
@@ -45,116 +45,116 @@
   <ItemGroup>
     <ClCompile Include="UnitTestApp.xaml.cpp" />
     <ClCompile Include="pch.cpp" />
-    <ClCompile Include="Tests\File-Helpers\file_attribute_tests.cpp">
-      <Filter>Tests\File-Helpers</Filter>
+    <ClCompile Include="Tests\additional_helper_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\File-Helpers\open_file_tests.cpp">
-      <Filter>Tests\File-Helpers</Filter>
+    <ClCompile Include="Tests\content_data_read_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\File-Helpers\read_file_tests.cpp">
-      <Filter>Tests\File-Helpers</Filter>
+    <ClCompile Include="Tests\content_data_write_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\File-Helpers\truncate_file_tests.cpp">
-      <Filter>Tests\File-Helpers</Filter>
+    <ClCompile Include="Tests\content_dictionary_test.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\File-Helpers\write_file_tests.cpp">
-      <Filter>Tests\File-Helpers</Filter>
+    <ClCompile Include="Tests\content_file_header_read_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Dictionary\content_dictionary_test.cpp">
-      <Filter>Tests\Dictionary</Filter>
+    <ClCompile Include="Tests\content_file_header_write_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Buffers\content_metadata_buffer_tests.cpp">
-      <Filter>Tests\Buffers</Filter>
+    <ClCompile Include="Tests\content_metadata_buffer_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Buffers\dict_entry_buffer_tests.cpp">
-      <Filter>Tests\Buffers</Filter>
+    <ClCompile Include="Tests\content_store_config_loader.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Buffers\dict_metadata_buffer_tests.cpp">
-      <Filter>Tests\Buffers</Filter>
+    <ClCompile Include="Tests\dict_entry_buffer_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Buffers\file_header_buffer_tests.cpp">
-      <Filter>Tests\Buffers</Filter>
+    <ClCompile Include="Tests\dict_meta_read_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\File-Helpers\additional_helper_tests.cpp">
-      <Filter>Tests\File-Helpers</Filter>
+    <ClCompile Include="Tests\dict_meta_write_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Content-File\move_constructor.cpp">
-      <Filter>Tests\Content-File</Filter>
+    <ClCompile Include="Tests\dict_metadata_buffer_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Content-File\open_existing_file_read.cpp">
-      <Filter>Tests\Content-File</Filter>
+    <ClCompile Include="Tests\dict_read_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Content-File\open_existing_file_write.cpp">
-      <Filter>Tests\Content-File</Filter>
+    <ClCompile Include="Tests\dict_write_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Content-File\open_new_file_read.cpp">
-      <Filter>Tests\Content-File</Filter>
+    <ClCompile Include="Tests\file_attribute_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Content-File\open_new_file_write.cpp">
-      <Filter>Tests\Content-File</Filter>
+    <ClCompile Include="Tests\file_header_buffer_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Content-File\read_accessors.cpp">
-      <Filter>Tests\Content-File</Filter>
+    <ClCompile Include="Tests\import_helper_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Content-File\write_accessors.cpp">
-      <Filter>Tests\Content-File</Filter>
+    <ClCompile Include="Tests\move_constructor.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\File-Loaders\content_store_config_loader.cpp">
-      <Filter>Tests\File-Loaders</Filter>
+    <ClCompile Include="Tests\offset_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\File-Loaders\string_file_loader.cpp">
-      <Filter>Tests\File-Loaders</Filter>
+    <ClCompile Include="Tests\open_existing_file_read.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\File-Loaders\wstring_file_loader.cpp">
-      <Filter>Tests\File-Loaders</Filter>
+    <ClCompile Include="Tests\open_existing_file_write.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Importers\import_helper_tests.cpp">
-      <Filter>Tests\Importers</Filter>
+    <ClCompile Include="Tests\open_file_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Importers\string_importer_tests.cpp">
-      <Filter>Tests\Importers</Filter>
+    <ClCompile Include="Tests\open_new_file_read.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Importers\struct_importer_tests.cpp">
-      <Filter>Tests\Importers</Filter>
+    <ClCompile Include="Tests\open_new_file_write.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Importers\wstring_importer_tests.cpp">
-      <Filter>Tests\Importers</Filter>
+    <ClCompile Include="Tests\read_accessors.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Read-Write-Helpers\content_data_read_tests.cpp">
-      <Filter>Tests\Read-Write-Helpers</Filter>
+    <ClCompile Include="Tests\read_file_offset_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Read-Write-Helpers\content_data_write_tests.cpp">
-      <Filter>Tests\Read-Write-Helpers</Filter>
+    <ClCompile Include="Tests\read_file_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Read-Write-Helpers\content_file_header_read_tests.cpp">
-      <Filter>Tests\Read-Write-Helpers</Filter>
+    <ClCompile Include="Tests\string_file_loader.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Read-Write-Helpers\content_file_header_write_tests.cpp">
-      <Filter>Tests\Read-Write-Helpers</Filter>
+    <ClCompile Include="Tests\string_importer_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Read-Write-Helpers\dict_meta_read_tests.cpp">
-      <Filter>Tests\Read-Write-Helpers</Filter>
+    <ClCompile Include="Tests\struct_importer_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Read-Write-Helpers\dict_meta_write_tests.cpp">
-      <Filter>Tests\Read-Write-Helpers</Filter>
+    <ClCompile Include="Tests\truncate_file_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Read-Write-Helpers\dict_read_tests.cpp">
-      <Filter>Tests\Read-Write-Helpers</Filter>
+    <ClCompile Include="Tests\valid_data_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Read-Write-Helpers\dict_write_tests.cpp">
-      <Filter>Tests\Read-Write-Helpers</Filter>
+    <ClCompile Include="Tests\write_accessors.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Read-Write-Helpers\offset_tests.cpp">
-      <Filter>Tests\Read-Write-Helpers</Filter>
+    <ClCompile Include="Tests\write_file_offset_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Read-Write-Helpers\read_file_offset_tests.cpp">
-      <Filter>Tests\Read-Write-Helpers</Filter>
+    <ClCompile Include="Tests\write_file_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Read-Write-Helpers\valid_data_tests.cpp">
-      <Filter>Tests\Read-Write-Helpers</Filter>
+    <ClCompile Include="Tests\wstring_file_loader.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Read-Write-Helpers\write_file_offset_tests.cpp">
-      <Filter>Tests\Read-Write-Helpers</Filter>
+    <ClCompile Include="Tests\wstring_importer_tests.cpp">
+      <Filter>Tests</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
