--- a/Tests/QGL_Content.UnitTests/QGL_Content.UnitTests.vcxproj.filters
+++ b/Tests/QGL_Content.UnitTests/QGL_Content.UnitTests.vcxproj.filters
@@ -23,9 +23,6 @@
     <Filter Include="Tests\Test-Files">
       <UniqueIdentifier>{9b8ff837-4a2d-4c6b-91f6-b2de97584859}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Tests\Read-Write-Helpers">
-      <UniqueIdentifier>{1828aae1-a58f-43e2-af6d-65ecf1b5b05f}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Tests\Importers">
       <UniqueIdentifier>{369a8661-1998-4b09-ad51-4620a583e8c0}</UniqueIdentifier>
     </Filter>
@@ -45,116 +42,89 @@
   <ItemGroup>
     <ClCompile Include="UnitTestApp.xaml.cpp" />
     <ClCompile Include="pch.cpp" />
-    <ClCompile Include="Tests\additional_helper_tests.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\content_data_read_tests.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\content_data_write_tests.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\content_dictionary_test.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\content_file_header_read_tests.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\content_file_header_write_tests.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\content_metadata_buffer_tests.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\content_store_config_loader.cpp">
-      <Filter>Tests</Filter>
+    <ClCompile Include="Tests\dict_write_tests.cpp">
+      <Filter>Tests\Dictionary</Filter>
     </ClCompile>
     <ClCompile Include="Tests\dict_entry_buffer_tests.cpp">
-      <Filter>Tests</Filter>
+      <Filter>Tests\Dictionary</Filter>
     </ClCompile>
     <ClCompile Include="Tests\dict_meta_read_tests.cpp">
-      <Filter>Tests</Filter>
+      <Filter>Tests\Dictionary</Filter>
     </ClCompile>
     <ClCompile Include="Tests\dict_meta_write_tests.cpp">
-      <Filter>Tests</Filter>
+      <Filter>Tests\Dictionary</Filter>
     </ClCompile>
     <ClCompile Include="Tests\dict_metadata_buffer_tests.cpp">
-      <Filter>Tests</Filter>
+      <Filter>Tests\Dictionary</Filter>
     </ClCompile>
     <ClCompile Include="Tests\dict_read_tests.cpp">
-      <Filter>Tests</Filter>
+      <Filter>Tests\Dictionary</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\dict_write_tests.cpp">
-      <Filter>Tests</Filter>
+    <ClCompile Include="Tests\content_dictionary_test.cpp">
+      <Filter>Tests\Dictionary</Filter>
+    </ClCompile>
+    <ClCompile Include="Tests\content_data_read_tests.cpp">
+      <Filter>Tests\Content-File</Filter>
+    </ClCompile>
+    <ClCompile Include="Tests\content_data_write_tests.cpp">
+      <Filter>Tests\Content-File</Filter>
+    </ClCompile>
+    <ClCompile Include="Tests\content_file_header_read_tests.cpp">
+      <Filter>Tests\Content-File</Filter>
+    </ClCompile>
+    <ClCompile Include="Tests\content_file_header_write_tests.cpp">
+      <Filter>Tests\Content-File</Filter>
+    </ClCompile>
+    <ClCompile Include="Tests\content_metadata_buffer_tests.cpp">
+      <Filter>Tests\Buffers</Filter>
     </ClCompile>
     <ClCompile Include="Tests\file_attribute_tests.cpp">
-      <Filter>Tests</Filter>
+      <Filter>Tests\File-Helpers</Filter>
     </ClCompile>
     <ClCompile Include="Tests\file_header_buffer_tests.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\import_helper_tests.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\move_constructor.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\offset_tests.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\open_existing_file_read.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\open_existing_file_write.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\open_file_tests.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\open_new_file_read.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\open_new_file_write.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\read_accessors.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\read_file_offset_tests.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\read_file_tests.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\string_file_loader.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\string_importer_tests.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\struct_importer_tests.cpp">
-      <Filter>Tests</Filter>
+      <Filter>Tests\Buffers</Filter>
     </ClCompile>
     <ClCompile Include="Tests\truncate_file_tests.cpp">
-      <Filter>Tests</Filter>
+      <Filter>Tests\File-Helpers</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\valid_data_tests.cpp">
-      <Filter>Tests</Filter>
+    <ClCompile Include="Tests\struct_importer_tests.cpp">
+      <Filter>Tests\Importers</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\write_accessors.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\write_file_offset_tests.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\write_file_tests.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
-    <ClCompile Include="Tests\wstring_file_loader.cpp">
-      <Filter>Tests</Filter>
+    <ClCompile Include="Tests\string_importer_tests.cpp">
+      <Filter>Tests\Importers</Filter>
     </ClCompile>
     <ClCompile Include="Tests\wstring_importer_tests.cpp">
-      <Filter>Tests</Filter>
+      <Filter>Tests\Importers</Filter>
+    </ClCompile>
+    <ClCompile Include="Tests\string_file_loader.cpp">
+      <Filter>Tests\File-Loaders</Filter>
+    </ClCompile>
+    <ClCompile Include="Tests\wstring_file_loader.cpp">
+      <Filter>Tests\File-Loaders</Filter>
+    </ClCompile>
+    <ClCompile Include="Tests\content_store_config_loader.cpp">
+      <Filter>Tests\File-Loaders</Filter>
+    </ClCompile>
+    <ClCompile Include="Tests\open_file_tests.cpp">
+      <Filter>Tests\File-Helpers</Filter>
+    </ClCompile>
+    <ClCompile Include="Tests\import_helper_tests.cpp">
+      <Filter>Tests\Importers</Filter>
+    </ClCompile>
+    <ClCompile Include="Tests\read_file_offset_tests.cpp">
+      <Filter>Tests\File-Helpers</Filter>
+    </ClCompile>
+    <ClCompile Include="Tests\write_file_offset_tests.cpp">
+      <Filter>Tests\File-Helpers</Filter>
+    </ClCompile>
+    <ClCompile Include="Tests\write_file_tests.cpp">
+      <Filter>Tests\File-Helpers</Filter>
+    </ClCompile>
+    <ClCompile Include="Tests\read_file_tests.cpp">
+      <Filter>Tests\File-Helpers</Filter>
+    </ClCompile>
+    <ClCompile Include="Tests\additional_helper_tests.cpp">
+      <Filter>Tests\File-Helpers</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
