Add some tests for content project. Refactor content project class to meet changing requirements.

--- a/Tests/QGL_Content.UnitTests/QGL_Content.UnitTests.vcxproj
+++ b/Tests/QGL_Content.UnitTests/QGL_Content.UnitTests.vcxproj
@@ -268,6 +268,7 @@
     <Image Include="Assets\Wide310x150Logo.scale-200.png" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="content_project_tests.cpp" />
     <ClCompile Include="Tests\additional_helper_tests.cpp" />
     <ClCompile Include="Tests\content_data_read_tests.cpp" />
     <ClCompile Include="Tests\content_data_write_tests.cpp" />
