--- a/QGL_Content/QGL_Content.vcxproj.filters
+++ b/QGL_Content/QGL_Content.vcxproj.filters
@@ -121,6 +121,12 @@
     <ClCompile Include="qgl_content_data_entry.cpp">
       <Filter>Source Files\Content-Files</Filter>
     </ClCompile>
+    <ClCompile Include="qgl_data_content_entry.cpp">
+      <Filter>Source Files\Content-Files</Filter>
+    </ClCompile>
+    <ClCompile Include="qgl_shared_content_entry.cpp">
+      <Filter>Source Files\Content-Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="QGLContent.h">
@@ -211,6 +217,12 @@
       <Filter>Header Files\Content-Importers</Filter>
     </ClInclude>
     <ClInclude Include="include\Content-Files\qgl_content_data_entry.h">
+      <Filter>Header Files\Content-Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Content-Files\qgl_shared_content_entry.h">
+      <Filter>Header Files\Content-Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Content-Files\qgl_data_content_entry.h">
       <Filter>Header Files\Content-Files</Filter>
     </ClInclude>
   </ItemGroup>
