Renamed content_data_entry to content_variant_entry.

--- a/QGL_Content/QGL_Content.vcxproj.filters
+++ b/QGL_Content/QGL_Content.vcxproj.filters
@@ -118,13 +118,13 @@
     <ClCompile Include="qgl_content_file.cpp">
       <Filter>Source Files\Content-Files</Filter>
     </ClCompile>
-    <ClCompile Include="qgl_content_data_entry.cpp">
-      <Filter>Source Files\Content-Files</Filter>
-    </ClCompile>
     <ClCompile Include="qgl_data_content_entry.cpp">
       <Filter>Source Files\Content-Files</Filter>
     </ClCompile>
     <ClCompile Include="qgl_shared_content_entry.cpp">
+      <Filter>Source Files\Content-Files</Filter>
+    </ClCompile>
+    <ClCompile Include="qgl_content_variant_entry.cpp">
       <Filter>Source Files\Content-Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -216,13 +216,13 @@
     <ClInclude Include="include\Content-Importers\qgl_import_helpers.h">
       <Filter>Header Files\Content-Importers</Filter>
     </ClInclude>
-    <ClInclude Include="include\Content-Files\qgl_content_data_entry.h">
-      <Filter>Header Files\Content-Files</Filter>
-    </ClInclude>
     <ClInclude Include="include\Content-Files\qgl_shared_content_entry.h">
       <Filter>Header Files\Content-Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Content-Files\qgl_data_content_entry.h">
+      <Filter>Header Files\Content-Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Content-Files\qgl_content_variant_entry.h">
       <Filter>Header Files\Content-Files</Filter>
     </ClInclude>
   </ItemGroup>
